Upgrade Java 17
Issue-ID: POLICY-4803
Change-Id: Ic7852fffa2f5a2f407900e7caae9e70bd50b267f
Signed-off-by: FrancescoFioraEst <francesco.fiora@est.tech>